# topicmodelling-lda

./: LICENSE.txt  README.md  pyproject.toml
data/: abbreviation_list.txt  exclusion_list.txt
notebooks/: topic_modelling_demo.ipynb
src/pipeline/: preprocessing.py  topicmodelling.py
